<resources>
    <string name="app_name">okko_tv</string>
    <string name="world_cinema">WorldCinema</string>
    <string name="fam">Фамилия</string>
    <string name="name">Имя</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Пароль</string>
    <string name="double_password">Повторите пароль</string>
    <string name="Sing_in">Зарегистрироваться</string>
    <string name="text">У меня уже есть аккаунт</string>
    <string name="title_activity_screen2">screen2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="collection">Коллекции</string>
    <string name="izbran">Избранное</string>
    <string name="v_poezd">В поездку</string>
    <string name="somebody">Куда-нибудь</string>
</resources>