<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@color/background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="170dp"
        android:layout_marginHorizontal="120dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/world_cinema"
        android:layout_marginHorizontal="80dp"
        android:textColor="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="40sp"
        app:layout_constraintTop_toTopOf="@id/logo" />
    <EditText
        android:id="@+id/name"
        android:background="@drawable/shape_radius"
        android:layout_marginTop="20dp"
        android:textColor="@color/gray"
        android:textColorHint="@color/gray"
        android:paddingStart="15dp"
        android:hint="@string/name"
        android:layout_width="300dp"
        android:backgroundTint="@color/white"
        android:layout_marginHorizontal="55dp"
        android:layout_height="40dp"/>
    <EditText
        android:id="@+id/fam"
        android:background="@drawable/shape_radius"
        android:layout_marginTop="10dp"
        android:paddingStart="15dp"
        android:textColor="@color/gray"
        android:textColorHint="@color/gray"
        android:hint="@string/fam"
        android:backgroundTint="@color/white"
        android:layout_width="300dp"
        android:layout_marginHorizontal="55dp"
        android:layout_height="40dp"/>
    <EditText
        android:id="@+id/email"
        android:background="@drawable/shape_radius"
        android:paddingStart="15dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/gray"
        android:textColorHint="@color/gray"
        android:hint="@string/e_mail"
        android:layout_width="300dp"
        android:backgroundTint="@color/white"
        android:layout_marginHorizontal="55dp"
        android:layout_height="40dp"/>
    <EditText
        android:id="@+id/password"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_radius"
        android:paddingStart="15dp"
        android:textColor="@color/gray"
        android:textColorHint="@color/gray"
        android:hint="@string/password"
        android:layout_width="300dp"
        android:backgroundTint="@color/white"
        android:inputType="textPassword"
        android:layout_marginHorizontal="55dp"
        android:layout_height="40dp"/>

    <EditText
        android:id="@+id/double_password"
        android:layout_marginTop="10dp"
        android:textColor="@color/gray"
        android:paddingStart="15dp"
        android:textColorHint="@color/gray"
        android:hint="@string/double_password"
        android:layout_width="300dp"
        android:background="@drawable/shape_radius"
        android:backgroundTint="@color/white"
        android:inputType="textPassword"
        android:layout_marginHorizontal="55dp"
        android:layout_height="40dp" />
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/shape"
        android:text="@string/Sing_in"
        android:onClick="input"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="55dp"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:background="@drawable/shape_radius"
        android:textAllCaps="false"
        android:text="@string/text"
        android:textColor="@color/blue"
        android:layout_marginHorizontal="55dp"/>


</LinearLayout>