<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".ui.notifications.NotificationsFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/collection"
            android:layout_marginTop="30dp"
            android:layout_marginStart="135dp"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:layout_height="wrap_content"/>
        <ImageView
            android:layout_width="45dp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="100dp"
            android:src="@drawable/ic_action_name"
            android:layout_height="40dp"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginStart="40dp"
            android:src="@drawable/eclipse"
            android:layout_height="wrap_content"/>
        <ImageView
            android:src="@drawable/hart"
            android:layout_marginTop="65dp"
            android:layout_marginStart="-33dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/izbran"
            android:layout_marginTop="57dp"
            android:layout_marginStart="60dp"
            android:textColor="@color/white"
            android:textSize="20sp"/>
        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="wrap_content"
            android:src="@drawable/arrow"
            android:layout_marginStart="100dp"
            android:layout_marginTop="52dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginStart="40dp"
            android:src="@drawable/eclipse"
            android:layout_height="wrap_content"/>
        <ImageView
            android:src="@drawable/time"
            android:layout_marginTop="63dp"
            android:layout_marginStart="-31dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/somebody"
            android:layout_marginTop="57dp"
            android:layout_marginStart="60dp"
            android:textColor="@color/white"
            android:textSize="20sp"/>
        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="wrap_content"
            android:src="@drawable/arrow"
            android:layout_marginStart="85dp"
            android:layout_marginTop="52dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginStart="40dp"
            android:src="@drawable/eclipse"
            android:layout_height="wrap_content"/>
        <ImageView
            android:src="@drawable/fly"
            android:layout_marginTop="63dp"
            android:layout_marginStart="-31dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/v_poezd"
            android:layout_marginTop="57dp"
            android:layout_marginStart="60dp"
            android:textColor="@color/white"
            android:textSize="20sp"/>
        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="wrap_content"
            android:src="@drawable/arrow"
            android:layout_marginStart="108dp"
            android:layout_marginTop="52dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="g"
        android:id="@+id/text_notification"
        android:textColor="@color/background"/>
</LinearLayout>